// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should apply active color to loading icon 1`] = `
<div
  class="van-loading van-loading--circular van-switch__loading"
  aria-live="polite"
  aria-busy="true"
>
  <span
    class="van-loading__spinner van-loading__spinner--circular"
    style="color: red;"
  >
    <svg
      class="van-loading__circular"
      viewbox="25 25 50 50"
    >
      <circle
        cx="50"
        cy="50"
        r="20"
        fill="none"
      >
      </circle>
    </svg>
  </span>
</div>
`;

exports[`should apply inactive color to loading icon 1`] = `
<div
  class="van-loading van-loading--circular van-switch__loading"
  aria-live="polite"
  aria-busy="true"
>
  <span
    class="van-loading__spinner van-loading__spinner--circular"
    style="color: black;"
  >
    <svg
      class="van-loading__circular"
      viewbox="25 25 50 50"
    >
      <circle
        cx="50"
        cy="50"
        r="20"
        fill="none"
      >
      </circle>
    </svg>
  </span>
</div>
`;

exports[`should render background slot correctly 1`] = `
<div
  role="switch"
  class="van-switch"
  tabindex="0"
  aria-checked="false"
>
  <div class="van-switch__node">
  </div>
  Custom background
</div>
`;

exports[`should render node slot correctly 1`] = `
<div
  role="switch"
  class="van-switch"
  tabindex="0"
  aria-checked="false"
>
  <div class="van-switch__node">
    Custom node
  </div>
</div>
`;
